--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ plugins:
 ## Docs: http://zespia.tw/hexo/docs/deploy.html
 deploy:
   type: git 					#类型，要使用git
-#  repo: git@github.com:xuyuri/xuyuri.github.io.git 	#仓库SSH链接
-  repo: https://github.com/xuyuri/xuyuri.github.io.git 	#仓库SSH链接
+  repo: git@github.com:xuyuri/xuyuri.github.io.git 	#仓库SSH链接
+#  repo: https://github.com/xuyuri/xuyuri.github.io.git 	#仓库SSH链接
   branch: master
 
 
